# mcp-browse-me

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml  post-start.sh
client/: main.py
data/: Chinook_PostgreSql.sql  Chinook_Sqlite.sqlite
data/ddl/: chat_threads.sql
server/: fast_mcp_server.py  mcp_server.py
src/: logger.py  settings.py
src/api/: main.py
src/chatbot/: graph.py  stateful.py  store.py  vector_memory.py
src/mcp/client/: actions.py  main.py
src/mcp/server/: fast_mcp_server.py  mcp_server.py
src/models/: __init__.py  action_request.py  action_response.py  agent_request.py  agent_response.py  chat_state.py  stateful_chat.py
