[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-browse-me"
version = "0.1.0"
description = "A simple Model Context Protocol Hello World application"
authors = [
    {name = "Gabriel Munumel", email = "gabrielmunumel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.110.0",
    "fastmcp>=2.13.0.2",
    "chromadb==0.5.15",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.70",
    "mcp[cli]>=1.19.0",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/mcp-browse-me"
Repository = "https://github.com/your-username/mcp-browse-me"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
# Include any data files you might need
"*" = ["*.txt", "*.md"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]  # I = import sorting; E,F = basic lint
ignore = []

[tool.ruff.format]
quote-style = "double"       # black-style formatting
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Add explicit package bases for src layout
explicit_package_bases = true
namespace_packages = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.5",
]
